# spark

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.es.md  README.md  config.example.toml  install.sh
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
assets/: spark.skill.md
docs/: ADDING_TOOLS.md  ARCHITECTURE.md  INSTALLATION.md  README.md  TASK_TODO.md  WORKFLOWS.md  index.html
docs/TASK_COMPLETED/: 2026-03.md
docs/dev/: ARCHITECTURE.md  DEV_GUIDELINES.md  INSTALLATION.md  TASK_TODO.md  TRS_INTEGRATION.md  WORKFLOWS.md
docs/dev/TASK_COMPLETED/: 2604.md
internal/core/: changelogs.go
internal/tui/: preview.go
internal/updater/: executor.go
npm/: README.md  install.js  package.json
scripts/: install.sh  smoke-test.sh  version.sh
src/: app.rs  config.rs  main.rs
src/app/: actions.rs  mod.rs  spawn.rs
src/cli/: audit.rs  certs.rs  ingest.rs  mod.rs  ports.rs  repos.rs  system.rs  tags.rs
src/cli/audit/: deps.rs  history.rs  ignore.rs  mod.rs  patterns.rs  secrets.rs
src/cli/ports/: kill.rs  list.rs  mod.rs  ps_list.rs  search.rs
src/cli/repos/: mod.rs  pull.rs  status.rs
src/core/: changelogs.rs  inventory.rs  mod.rs  types.rs
src/core/inventory/: dev.rs  mod.rs  platform.rs
src/scanner/: cert_scanner.rs  cleaner.rs  code_patterns.rs  common.rs  dep_scanner.rs  health.rs  history_scanner.rs  mod.rs  port_scanner.rs  repo_ingest.rs  repo_manager.rs  repo_scanner.rs  repo_tags.rs  secret_scanner.rs  space_analyzer.rs  system_categories.rs  system_cleaner.rs
src/scanner/code_patterns/: mod.rs  patterns.rs
src/scanner/dep_scanner/: mod.rs  parsers.rs
src/scanner/port_scanner/: linux.rs  macos.rs  mod.rs  runtime.rs
src/scanner/secret_scanner/: content.rs  context.rs  filename.rs  mod.rs  patterns.rs
src/tui/: mod.rs  model.rs  scanner_keys.rs  styles.rs  update.rs  view.rs
src/tui/model/: audit.rs  mod.rs  repo.rs  scanner.rs  system.rs  updater.rs
src/tui/scanner_keys/: audit_tab.rs  mod.rs  port_tab.rs  repo_tab.rs  scanner_tab.rs  system_tab.rs
src/tui/update/: messages.rs  mod.rs  updater_keys.rs
src/tui/widgets/: audit_view.rs  dashboard.rs  detail_panel.rs  mod.rs  modal.rs  port_view.rs  progress.rs  repo_manager_view.rs  scanner_view.rs  search.rs  splash.rs  system_view.rs
src/tui/widgets/audit_view/: deps.rs  detail.rs  mod.rs
src/tui/widgets/repo_manager_view/: clone.rs  mod.rs
src/tui/widgets/scanner_view/: config.rs  mod.rs  results.rs
src/tui/widgets/system_view/: mod.rs  risk.rs  table.rs
src/updater/: detector.rs  executor.rs  mod.rs  version.rs
src/utils/: fs.rs  mod.rs  shell.rs
