[package]
name = "spark"
version = "0.7.0"
edition = "2021"
description = "Surgical Precision Update Utility & Repository Scanner"
authors = ["dPeluChe"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1"
dirs = "5"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
