[package]
name = "spark"
version = "0.7.0"
edition = "2021"
rust-version = "1.75"
description = "Surgical Precision Update Utility & Repository Scanner — a Rust TUI for managing 44+ developer tools and cleaning stale git repos"
authors = ["dPeluChe"]
license = "MIT"
repository = "https://github.com/dPeluChe/labs-spark"
readme = "README.md"
keywords = ["tui", "updater", "scanner", "developer-tools", "cleanup"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["cmd/", "internal/", "go.mod", "go.sum", "*.go"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
git2 = "0.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
bytesize = "1"
dirs = "5"
color-eyre = "0.6"
clap = { version = "4", features = ["derive"] }
regex = "1"
once_cell = "1"

[profile.release]
strip = true
lto = true
opt-level = "z"
